# hcnet

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  hcnetConfig.cmake.in
examples/chat_cmd/: .gitignore  CMakeLists.txt  CMakePresets.json
examples/chat_cmd/include/: Common.hpp  Messages.hpp
examples/chat_cmd/src/: client.cpp  host.cpp
examples/cmd_chat/: .gitignore  CMakeLists.txt
examples/cmd_chat/include/: TempForTest.hpp
examples/cmd_chat/src/: client.cpp  host.cpp
include/hcnet/: better_types.hpp  canyon.hpp  client.hpp  dual_vector.hpp  error.hpp  host.hpp  msg.hpp  mut_order_array.hpp  socket.hpp  ts_deque.hpp  upnp.hpp
